# pane

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .release-it.json  AGENTS.md  Directory.Build.props  Directory.Packages.props  Home.slnx  README.md  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  tsconfig.json  vite.config.ts
.claude/: cdp-attach.mjs  cdp-keys.mjs  cdp-list.mjs  cdp-target.mjs  cdp.mjs  handoff-preview-slide.md  launch.json  phase3-debug.md  settings.json
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
.husky/: pre-commit
apps/mobile/: App.tsx  README.md  app.config.js  app.config.ts  app.json  babel.config.js  index.js  metro.config.js  package.json
apps/windows/: .gitignore  app.json  babel.config.js  index.html  metro.config.js  package.json  tamagui.build.ts  tsconfig.json  vite.config.ts
docs/: 2026-05-27-tauri-migration-spike.md  2026-05-29-security-hardening-plan.md  2026-06-01-mobile-companion-plan.md  2026-06-02-monorepo-restructure-plan.md  2026-06-04-code-quality-audit.md  2026-06-06-capture-annotation-plan.md  2026-06-06-capture-history-plan.md  2026-06-06-command-palette-plan.md  2026-06-06-global-hotkeys-manager-plan.md  2026-06-06-light-presets-plan.md  2026-06-06-tray-menu-plan.md  2026-06-28-windows-remove-expo-react-native-plan.md  README.md  mobile-companion-plan.md  monorepo-restructure-plan.md  security-hardening-plan.md  tauri-migration-spike.md
legacy/CleanShotW/: App.xaml  App.xaml.cs  CleanShotW.csproj  GlobalUsings.cs  Package.appxmanifest
legacy/DXLight.Cli/: DXLight.Cli.csproj  Program.cs
legacy/DXLight.Tray/: ControlForm.cs  DXLight.Tray.csproj  Program.cs  StartupManager.cs  TrayApplicationContext.cs
legacy/LightControls.Desktop/: App.xaml  App.xaml.cs  LightControls.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  TrayIconFactory.cs
mobile/companion/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
pane-prototypes/: MIGRATION.md  README.md  index.html  package-lock.json  package.json
pane-prototypes/src/: App.tsx  fontsource.d.ts  index.css  main.tsx
scripts/: build-identity-package.ps1  build.ps1  capture-window.ps1  dev-packaged.ps1  dev-trusted.ps1  dev.ps1  format-file.mjs  format-file.ts  generate-home-icons.ps1  generate-home-icons.py  install-tauri-prereqs.ps1  prepare-release-artifacts.ps1  release-it.ps1  release.ps1  run-expo-cli.mjs  run-vite-dev.mjs  start.ps1  stop.ps1  sync-release-version.ts  sync-tauri-gen.ts  tauri-spike.ps1  test.ps1
src/: App.tsx  main.tsx  package-lock.json  package.json  styles.css  tailwind.config.ts
src-legacy/DXLight.Core/: DXLight.Core.csproj  DeviceSession.cs  HidDeviceTransport.cs  RobobloqProtocol.cs
src-legacy/Home.Core/: HomeServiceCollectionExtensions.cs  IHomeModule.cs
src-legacy/Home.Hub/: app.manifest
src-legacy/Home.Standalone.CleanShot/: Program.cs
src-legacy/Home.Windows/: HomeHubPublish.targets  PowerBroadcast.cs  StandaloneLauncher.cs
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  rustfmt.toml  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: accent-popup.json  area-selector.json  capture-preview.json  default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/identity/: AppxManifest.xml
src-tauri/identity/public/: .gitkeep
src-tauri/resources/identity/: register-identity.ps1  unregister-identity.ps1
src-tauri/src/: accent_popup.rs  brightness_keys.rs  lib.rs  power_notify.rs  tray.rs
src-tauri/src/commands/: accent.rs  audio.rs  brightness.rs  capture.rs  capture_sound.rs  companion.rs  companion_snapshot.rs  dx_light.rs  dynamic_lighting.rs  hotkeys.rs  light_state.rs  lighting.rs  mod.rs  startup.rs  windows.rs
src/CleanShot.Core/: CleanShot.Core.csproj
src/CleanShot.WinUI/: CleanShot.WinUI.csproj
src/DXLight.Core/: DeviceDiscovery.cs  DeviceModels.cs  DeviceTransport.cs  LightController.cs  LightSettings.cs
src/Home.Core/: Home.Core.csproj  HomeServiceCollectionExtensions.cs  HubSettings.cs  HubSettingsMigration.cs  IHomeModule.cs  ModuleRegistry.cs  ModuleStatus.cs
src/Home.Hub/: App.xaml  App.xaml.cs  Home.Hub.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
src/Home.Standalone.CleanShot/: Home.Standalone.CleanShot.csproj
src/Home.Standalone.DxLight/: Home.Standalone.DxLight.csproj  Program.cs
src/Home.Standalone.LightControls/: Home.Standalone.LightControls.csproj  Program.cs
src/Home.UI/: Home.UI.csproj
src/Home.Windows/: GlobalHotkeyCoordinator.cs  Home.Windows.csproj  HubProcessGate.cs  HubStartupService.cs  SettingsMigration.cs  SingleInstanceGate.cs  StandaloneLauncher.cs  WakeFromSleepStartupTask.cs  WindowsStartupRegistry.cs
src/LightControls.Core/: CompositeRgbBackend.cs  LightControls.Core.csproj  LightingController.cs
src/components/: FeatureCard.tsx  ShortcutInput.tsx
src/lib/: commands.ts  status.ts  updater.ts
src/src/: App.tsx  main.tsx  styles.css
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: lib.rs  main.rs  power_notify.rs  tray.rs
src/src-tauri/src/commands/: capture.rs  dx_light.rs  dynamic_lighting.rs  hotkeys.rs  light_state.rs  lighting.rs  metrics.rs  mod.rs  startup.rs  windows.rs
src/views/: AccentPopup.tsx  AreaSelector.tsx  CapturePreview.tsx  DesignSystem.tsx
tests/CleanShot.Tests/: CleanShot.Tests.csproj  TestBase.cs
tests/CleanShotW.Tests/: CleanShotW.Tests.csproj  TestBase.cs
tests/DXLight.Core.Tests/: DXLight.Core.Tests.csproj  LightControllerTests.cs  LightSettingsStoreTests.cs  RobobloqProtocolTests.cs
tests/LightControls.Tests/: LightControls.Tests.csproj  LightingControllerTests.cs  OpenRgbDownloadEndToEndTests.cs  OpenRgbDownloadIntegrationTests.cs  OpenRgbHttpClientJsonTests.cs  OpenRgbModeTests.cs  OpenRgbSetupManagerTests.cs  OpenRgbZoneApplyTests.cs  RgbColorTests.cs  SettingsStoreTests.cs
(+401 files in other folders)
