[package]
name = "pane"
version = "0.5.0"
description = "Pane desktop utility suite"
authors = ["Pane"]
edition = "2021"

[lib]
name = "pane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
hidapi = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
winreg = "0.55"
xcap = "0.9.6"
windows = { version = "0.62", features = ["Devices_Enumeration", "Devices_Lights", "Devices_Lights_Effects", "Foundation", "Foundation_Collections", "UI", "Win32_Foundation", "Win32_System_Power", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Storage_Packaging_Appx"] }
