[package]
name = "pane"
version = "0.6.0"
description = "Pane desktop utility suite"
authors = ["Pane"]
edition = "2021"

[lib]
name = "pane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
hidapi = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
winreg = "0.52"
xcap = "0.0.14"
windows = { version = "0.60", features = ["Devices_Enumeration", "Devices_Lights", "Devices_Lights_Effects", "Foundation", "Foundation_Collections", "UI", "Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_LibraryLoader", "Win32_System_Power", "Win32_System_Variant", "Win32_UI_Input", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }
# Direct dependency so the `#[interface]` macro's `::windows_core` paths resolve
# (used to declare the undocumented IPolicyConfig interface in commands/audio.rs).
windows-core = "0.60"

[target.'cfg(windows)'.dependencies]
ddc = "0.2"
ddc-winapi = "0.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Storage_Packaging_Appx"] }
