[package]
name = "pane"
version = "0.6.0"
description = "Pane desktop utility suite"
authors = ["Pane"]
edition = "2021"

[lib]
name = "pane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
axum = "0.8"
async-stream = "0.3"
futures-core = "0.3"
base64 = "0.22"
hidapi = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
tokio = { version = "1", features = ["time", "net", "rt", "sync"] }
winreg = "0.56"
xcap = "0.9.6"
windows = { version = "0.62", features = ["Devices_Enumeration", "Devices_Lights", "Devices_Lights_Effects", "Foundation", "Foundation_Collections", "UI", "Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_LibraryLoader", "Win32_System_Power", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }
# Direct dependency so the `#[interface]` macro's `::windows_core` paths resolve
# (used to declare the undocumented IPolicyConfig interface in commands/audio.rs).
windows-core = "0.62"

# NOTE: `ddc` is intentionally held at 0.2 to match `ddc-winapi` 0.2, which only
# implements `ddc` 0.2's `Ddc` trait. The only `ddc-winapi` compatible with
# `ddc` 0.3 is a pre-release alpha (0.3.0-alpha.2), so bumping `ddc` alone breaks
# the trait impl. Revisit once a stable `ddc-winapi` 0.3 is published.
[target.'cfg(windows)'.dependencies]
ddc = "0.3"
ddc-winapi = "0.2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Storage_Packaging_Appx"] }
