[package]
name = "home"
version = "0.1.0"
description = "Home desktop utility suite"
authors = ["Home"]
edition = "2021"

[lib]
name = "home_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
thiserror = "2"
