[package]
name = "home"
version = "0.1.0"
description = "Home desktop utility suite"
authors = ["Home"]
edition = "2021"

[lib]
name = "home_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
winreg = "0.52"
xcap = "0.0.14"
